...
                        android:text="@string/total"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textTotalExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="0€"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:maxLength="14"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
...

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleLineChartMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/month"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/titles_analysis"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineMonthChart"
                    android:layout_width="match_parent"
...
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/MonthlyExpenseSupermarket"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="25dp"
                                    android:text="0€"
                                    android:textSize="18dp"
                                    android:maxLength="10" />

                                <TextView
                                    android:id="@+id/MonthlyExpenseTransport"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="35dp"
                                    android:text="0€"
                                    android:textSize="18dp"
                                    android:maxLength="10"/>

                                <TextView
                                    android:id="@+id/MonthlyExpenseLeisure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="35dp"
                                    android:text="0€"
                                    android:textSize="18dp"
...
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/MonthlyExpenseShopping"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="25dp"
                                    android:text="0€"
                                    android:textSize="18dp"
                                    android:maxLength="10" />

                                <TextView
                                    android:id="@+id/MonthlyExpenseBills"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="35dp"
                                    android:text="0€"
                                    android:textSize="18dp"
                                    android:maxLength="10"
                                    />

                                <TextView
                                    android:id="@+id/MonthlyExpenseOther"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal|center_vertical"
                                    android:layout_marginTop="35dp"
                                    android:text="0€"
                                    android:textSize="18dp"
...
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/cash" />

                            <TextView
                                android:id="@+id/MonthlyExpenseCash"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_marginTop="10dp"
                                android:text="0€"
                                android:textSize="18dp"
...
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginLeft="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/cardMonthLegend"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/card" />

                            <TextView
                                android:id="@+id/MonthlyExpenseCard"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_marginTop="10dp"
                                android:text="0€"
                                android:textSize="18dp"
...
