<resources>
    <string name="app_name">Soldi</string>
    <string name="briefDescription">Time is gold!</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="firstTime">Here you can insert your first expense</string>

    <string name="addingExpense">Adding expense</string>
    <string name="confirmExpense">Confirm expense</string>

    //Accessibility for blind people
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="backButton">Navigate up</string>

    <string name="quantity_expense_title">How much?</string>
    <string name="expense_type_title">What?</string>
...
    <string name="badge">€</string>
    <string name="total">Total expenses</string>
    <string name="typeChartTitle">Type of Expenses</string>
    <string name="paymentChartTitle">Payment Methods</string>

    <string name="monthTitle">Monthly expenses</string>
    <string name="yearTitle">Yearly expenses</string>

    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="year">Year</string>
    <string name="month">Month</string>

    <string name="currentMonth">"Current month: "</string>
    <string name="currentYear">Current year: </string>

    <string name="selectLanguage">Language</string>
    <string name="deleteData">Delete expenses</string>
    <string name="deleteButton">Delete</string>
    <string name="deleteButtonAll">Delete All</string>

...
