...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleYearTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/yearTitle"
                    android:textColor="@color/titles_analysis"
                    android:textSize="30sp" />
...
                        android:text="@string/total"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textTotalExpenseYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="0€"
                    android:textSize="32sp"
                    android:textStyle="bold" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleLineChartYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/year"
                    android:textColor="@color/titles_analysis"
...
