...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/startExpenseButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
...
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputExpense"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="200dp"
...
